--- a/ims/public/assets/css/style.css
+++ b/ims/public/assets/css/style.css
@@ -3395,12 +3395,12 @@ fieldset:disabled .btn {
     --bs-btn-bg: #407AF4;
     --bs-btn-border-color: #407AF4;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #5130d4;
-    --bs-btn-hover-border-color: #20285A;
+    --bs-btn-hover-bg: #151D52;
+    --bs-btn-hover-border-color: #3041ac;
     --bs-btn-focus-shadow-rgb: 119, 86, 250;
     --bs-btn-active-color: #fff;
     --bs-btn-active-bg: #20285A;
-    --bs-btn-active-border-color: #472abb;
+    --bs-btn-active-border-color: #0c144b;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: #407AF4;
@@ -26347,8 +26347,9 @@ a.fc-event-darker-soft {
 }
 
 .is-theme .nk-menu .nk-menu-sub .active>.nk-menu-link {
-    color: #20285A;
-    opacity: 1
+    color: #151e43;
+    opacity: 1;
+    background-color : #f8f8f9;
 }
 
 .nk-nav {
