--- a/webapp/src/components/css/welcome.css
+++ b/webapp/src/components/css/welcome.css
@@ -12,6 +12,7 @@ body {
 }
 
 .right-content {
+	width: 100%;
 	display: flex;
 	justify-content: center !important;
 	align-items: center;
@@ -37,24 +38,24 @@ body {
 	margin-top: 10px;
 }
 .carousel {
-	text-align: left;
+	text-align: right;
 	justify-content: center !important;
 	align-items: center;
 }
 .text {
 	position: absolute;
 	top: 40%;
-	left: 10%;
+	left: 25%;
 }
 .image-container {
 	position: relative;
 	width: 100%;
 	height: 100vh;
 	overflow: hidden;
+	background-color: black;
 }
-
 .image-container img {
-	width: auto;
+	width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
@@ -62,11 +63,11 @@ body {
 .buttons {
 	position: absolute;
 	bottom: 30px; /* Adjust as needed */
-	left: 10%;
+	left: 50%;
 	transform: translateX(-50%);
 }
 
-.buttons button {
+.buttons #button {
 	width: 10px;
 	height: 10px;
 	border-radius: 50%;
@@ -76,7 +77,7 @@ body {
 	cursor: pointer;
 }
 
-.buttons button.active {
+.buttons #button.active {
 	background-color: rgb(
 		212,
 		176,
