ims changes - bishwas

--- a/ims/public/assets/css/style.css
+++ b/ims/public/assets/css/style.css
@@ -26073,6 +26073,10 @@ a.fc-event-darker-soft {
     padding: 2rem .5rem
 }
 
+.products-in-shop{
+    margin-top: 5% !important;
+}
+
 .nk-content-stretch {
     padding: 0 !important
 }
